# binance-crypto-trading

./: .gitignore  LICENSE  README.md
trade/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.secure  README.md  build.sh  docker-compose-secure.yml  docker-compose.yml  docker-run.bat  docker-run.sh
trade/include/: binance_api.h  json_parser.h  secure_storage.h
trade/src/: binance_api.cpp  json_parser.cpp  main.cpp  secure_storage.cpp
